--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hebrew-wordle",
-  "version": "1.1.3",
+  "version": "1.4.1",
   "private": true,
   "homepage": "https://oferico.github.io/hebrew-wordle",
   "dependencies": {
@@ -36,6 +36,9 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.7.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "gh-pages": "^6.3.0"
   }
 }
